--- a/src/WordRot/PlayBundle/Resources/views/Default/login_form.html.twig
+++ b/src/WordRot/PlayBundle/Resources/views/Default/login_form.html.twig
@@ -2,7 +2,7 @@
     <div>{{ error.message }}</div>
 {% endif %}
 
-<form action="{{ path('play') }}" method="post">
+<form action="{{ path('login_check') }}" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
