Supply active game ID to JS on page-load.

--- a/src/WordRot/PlayBundle/Resources/views/Play/index.html.twig
+++ b/src/WordRot/PlayBundle/Resources/views/Play/index.html.twig
@@ -21,7 +21,7 @@ var ServerRoutes = {
 {{ parent() }}
 <script type="text/javascript">
 $(function(){
-	WordRot.run({{ app.user.id }});
+	WordRot.run({{ app.user.id }}, {{ activeGame ? activeGame.getId : 'null' }});
 });
 </script>
 {% endblock %}
