restructured backbone components

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,9 +32,7 @@
             Application JS
         #}
         {% javascripts
-            '@WordRotPlayBundle/Resources/public/js/application.js'
-            '@WordRotPlayBundle/Resources/public/js/backbone/models.js'
-            '@WordRotPlayBundle/Resources/public/js/backbone/views.js'
+            '@WordRotPlayBundle/Resources/public/js/*/*'
             '@WordRotPlayBundle/Resources/public/js/*' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
         {% endjavascripts %}
