--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,22 +20,27 @@
         <header>
             {% block header %}{% endblock %}
         </header>
+
         {% block body %}{% endblock %}
+
         {% block javascripts %}
-        {#
-            Base JS libraries
-        #}
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
-        {#
-            Application JS
-        #}
-        {% javascripts
-            '@WordRotPlayBundle/Resources/public/js/*/*'
-            '@WordRotPlayBundle/Resources/public/js/*' %}
-        <script type="text/javascript" src="{{ asset_url }}"></script>
-        {% endjavascripts %}
+
+            {# Base JS libraries #}
+            <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+            <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+            <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
+
+            {# Application JS #}
+            {% javascripts
+                '@WordRotPlayBundle/Resources/public/js/app.js'
+                '@WordRotPlayBundle/Resources/public/js/models/*'
+                '@WordRotPlayBundle/Resources/public/js/collections/*'
+                '@WordRotPlayBundle/Resources/public/js/views/*'
+                '@WordRotPlayBundle/Resources/public/js/routers/*' %}
+            <script type="text/javascript" src="{{ asset_url }}"></script>
+            {% endjavascripts %}
+
         {% endblock %}
+
     </body>
 </html>
