nav view; stub view; backbone router

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,5 +1,7 @@
 <header>
+    <nav></nav>
     <div class="login"></div>
 </header>
 <div class="new-word"></div>
 <div class="list-word"></div>
+<div class="play"></div>
