--- a/app/templates/wordAdd.html
+++ b/app/templates/wordAdd.html
@@ -1,4 +1,6 @@
+{{#if user._id}}
 <form class="wordAdd">
     <input type="text" name="word" />
     <button class="add">Add word</button>
 </form>
+{{/if}}
